# mini-cuBLAS

./: .gitignore  CMakeLists.txt  README.md  TODO.md  requirements.txt  run_32x32.py
csrc/: bindings.cpp  kernels.cuh  utils.cuh
csrc/kernels/: dot_product.cu  elementwise.cu  naive_gemm.cu  tiled_gemm.cu  transpose.cu
python/: app.py  mini_cublas.py
python/pages/: 1_Tiling_Simulator.py  2_Memory_Hierarchy.py  3_Benchmark.py  4_Operation_Explorer.py
test/: test_correctness.py
